Begun implementation of Navbar

--- a/index.html
+++ b/index.html
@@ -17,6 +17,16 @@
 
   <!-- =============== Body =============== -->
   <body>
+  <!-- =============== Nav Bar =============== -->
+  <div class="onTop">
+    <div class="navbar" id="NavBar">
+      <a class="navitem navbutton" href="#Home">HOME</a>
+      <a class="navitem navbutton">ABOUT</a>
+      <a class="navitem navbutton">PORTFOLIO</a>
+      <a class="navitem navbutton">CONTACT</a>
+    </div>
+  </div>
+  <!-- =============== Home Div =============== -->
   <div class="bgimg-1" id="Home">
     <div class="parent" style="white-space:nowrap;">
       <span class="center">Aviator.Joe<blink>_</blink></span>
