--- a/index.html
+++ b/index.html
@@ -10,22 +10,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="css/main.css">
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!-- W3 Test CSS
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    -->
   </head>
+
 
   <!-- =============== Body =============== -->
   <body>
+
   <!-- =============== Nav Bar =============== -->
   <div class="onTop">
     <div class="navbar" id="NavBar">
       <a class="navitem navbutton" href="#Home">HOME</a>
-      <a class="navitem navbutton">ABOUT</a>
-      <a class="navitem navbutton">PORTFOLIO</a>
-      <a class="navitem navbutton">CONTACT</a>
+      <a class="navitem navbutton" href="#About">ABOUT</a>
+      <a class="navitem navbutton" href="#Portfolio">PORTFOLIO</a>
+      <a class="navitem navbutton" href="#Contact">CONTACT</a>
     </div>
   </div>
+
   <!-- =============== Home Div =============== -->
   <div class="bgimg-1" id="Home">
     <div class="parent" style="white-space:nowrap;">
