--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
     <div class="navbar" id="NavBar">
       <a class="navitem navbutton" href="#Home">HOME</a>
       <a class="navitem navbutton" href="#About">ABOUT</a>
+      <a class="navitem navbutton" href="#Videos">VIDEOS</a>
+      <a class="navitem navbutton" href="#Twitch">TWITCH</a>
       <a class="navitem navbutton" href="#Portfolio">PORTFOLIO</a>
       <a class="navitem navbutton" href="#Contact">CONTACT</a>
     </div>
@@ -37,18 +39,47 @@
       <span class="center">Aviator.Joe<blink>_</blink></span>
     </div>
   </div>
-  <div class="infobox-1">
+
+  <!-- =============== About Div =============== -->
+  <div class="infobox-1" id="About">
     test update
   </div>
-  <div class="bgimg-2">
+
+  <!-- =============== Image Separator =============== -->
+  <div class="bgimg-2"></div>
+
+  <!-- =============== Videos Div =============== -->
+  <div class="infobox-2" id="Videos">
 
   </div>
-  <div class="infobox-2">
+
+  <!-- =============== Image Separator =============== -->
+  <div class="bgimg-3"></div>
+
+  <!-- =============== Twitch Div =============== -->
+  <div class="infobox-3" id="Twich">
 
   </div>
-  <div class="bgimg-3">
+
+  <!-- =============== Image Separator =============== -->
+  <div class="bgimg-1"></div>
+
+  <!-- =============== Portfolio Div =============== -->
+  <div class="infobox-4" id="Portfolio">
 
   </div>
+
+  <!-- =============== Image Separator =============== -->
+  <div class="bgimg-2"></div>
+
+  <!-- =============== Contact Div =============== -->
+  <div class="infobox-5" id="Contact">
+
+  </div>
+
+  <!-- =============== Image Separator =============== -->
+  <div class="bgimg-3"></div>
+
   </body>
 
 </html>
