Fixed Twitch ID

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   <div class="bgimg-3"></div>
 
   <!-- =============== Twitch Div =============== -->
-  <div class="infobox-3" id="Twich">
+  <div class="infobox-3" id="Twitch">
 
   </div>
 
