Reorganized navbar css

--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
     <!-- =============== Nav Bar =============== -->
     <div class="onTop">
       <div class="navbar" id="NavBar">
-        <a class="navitem navbutton" href="#Home">HOME</a>
-        <a class="navitem navbutton" href="#About">ABOUT</a>
-        <a class="navitem navbutton" href="#Videos">VIDEOS</a>
-        <a class="navitem navbutton" href="#Twitch">TWITCH</a>
-        <a class="navitem navbutton" href="#Portfolio">PORTFOLIO</a>
-        <a class="navitem navbutton" href="#Contact">CONTACT</a>
+        <a class="navbutton" href="#Home">HOME</a>
+        <a class="navbutton" href="#About">ABOUT</a>
+        <a class="navbutton" href="#Videos">VIDEOS</a>
+        <a class="navbutton" href="#Twitch">TWITCH</a>
+        <a class="navbutton" href="#Portfolio">PORTFOLIO</a>
+        <a class="navbutton" href="#Contact">CONTACT</a>
       </div>
     </div>
 
@@ -80,6 +80,7 @@
     <!-- =============== Image Separator =============== -->
     <div class="bgimg-3"></div>
 
+    <!-- =============== Page Scripts =============== -->
   <script>
     // =============== Scrolled NavBar Script ===============
     window.onscroll = function () {scrollNavBar()};
