--- a/index.html
+++ b/index.html
@@ -24,22 +24,24 @@
     <!-- =============== Nav Bar =============== -->
     <div class="onTop">
       <div class="navbar" id="NavBar">
-
+        <a class="navmobilebutton largehide" href="javascript:void(0);" onclick="toggleFunction()" title="Toggle Navigation Menu">
+          <i class="fa fa-bars" style="color: lightgray;"></i>
+        </a>
         <a class="navbutton" href="#Home">HOME</a>
-        <a class="navbutton" href="#About">ABOUT</a>
-        <a class="navbutton" href="#Videos">VIDEOS</a>
-        <a class="navbutton" href="#Twitch">TWITCH</a>
-        <a class="navbutton" href="#Portfolio">PORTFOLIO</a>
-        <a class="navbutton" href="#Contact">CONTACT</a>
+        <a class="navbutton smallhide" href="#About"><i class="fa fa-user"></i> ABOUT</a>
+        <a class="navbutton smallhide" href="#Videos"><i class="fa fa-youtube-play"></i> VIDEOS</a>
+        <a class="navbutton smallhide" href="#Twitch"><i class="fa fa-twitch"></i> TWITCH</a>
+        <a class="navbutton smallhide" href="#Portfolio"><i class="fa fa-th"></i> PORTFOLIO</a>
+        <a class="navbutton smallhide" href="#Contact"><i class="fa fa-envelope"></i> CONTACT</a>
       </div>
-    </div>
-    <!-- =============== Nav Bar Mobile =============== -->
-    <div id="navbarsmall" class="">
-      <a href="#About" class="navbutton" onclick="toggleFunction()">ABOUT</a>
-      <a href="#Videos" class="navbutton" onclick="toggleFunction()">VIDEOS</a>
-      <a href="#Twitch" class="navbutton" onclick="toggleFunction()">TWITCH</a>
-      <a href="#Portfolio" class="navbutton" onclick="toggleFunction()">PORTFOLIO</a>
-      <a href="#Contact" class="navbutton" onclick="toggleFunction()">CONTACT</a>
+      <!-- =============== Nav Bar Mobile =============== -->
+      <div id="navbarsmall" class="barhide">
+        <a href="#About" class="navbutton" onclick="toggleFunction()">ABOUT</a>
+        <a href="#Videos" class="navbutton" onclick="toggleFunction()">VIDEOS</a>
+        <a href="#Twitch" class="navbutton" onclick="toggleFunction()">TWITCH</a>
+        <a href="#Portfolio" class="navbutton" onclick="toggleFunction()">PORTFOLIO</a>
+        <a href="#Contact" class="navbutton" onclick="toggleFunction()">CONTACT</a>
+      </div>
     </div>
 
     <!-- =============== Home Div =============== -->
@@ -107,11 +109,11 @@
     // =============== Mobile NavBar Script ===============
     function toggleFunction(){
       var x = document.getElementById("navbarsmall")
-      if (x.className.indexOf("smallshow") == -1){
-        x.className += "smallshow";
+      if (x.className.indexOf("barshow") == -1){
+        x.className += "barshow";
       }
       else{
-        x.className = x.className.replace("smallshow", " ");
+        x.className = x.className.replace("barshow", " ");
       }
     }
   </script>
