--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <!-- W3 Test CSS
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     -->
@@ -28,11 +28,11 @@
           <i class="fa fa-bars" style="color: lightgray;"></i>
         </a>
         <a class="navbutton" href="#Home">HOME</a>
-        <a class="navbutton smallhide" href="#About"><i class="fa fa-user"></i> ABOUT</a>
-        <a class="navbutton smallhide" href="#Videos"><i class="fa fa-youtube-play"></i> VIDEOS</a>
-        <a class="navbutton smallhide" href="#Twitch"><i class="fa fa-twitch"></i> TWITCH</a>
-        <a class="navbutton smallhide" href="#Portfolio"><i class="fa fa-th"></i> PORTFOLIO</a>
-        <a class="navbutton smallhide" href="#Contact"><i class="fa fa-envelope"></i> CONTACT</a>
+        <a class="navbutton smallhide" href="#About"><i class="fas fa-user"></i>  ABOUT</a>
+        <a class="navbutton smallhide" href="#Videos"><i class="fab fa-youtube"></i>  VIDEOS</a>
+        <a class="navbutton smallhide" href="#Twitch"><i class="fab fa-twitch"></i>  TWITCH</a>
+        <a class="navbutton smallhide" href="#Portfolio"><i class="fas fa-th"></i>  PORTFOLIO</a>
+        <a class="navbutton smallhide" href="#Contact"><i class="fas fa-envelope"></i>  CONTACT</a>
       </div>
       <!-- =============== Nav Bar Mobile =============== -->
       <div id="navbarsmall" class="barhide">
