--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <a class="navmobilebutton largehide" href="javascript:void(0);" onclick="toggleFunction()" title="Toggle Navigation Menu">
           <i class="fa fa-bars" style="color: lightgray;"></i>
         </a>
-        <a class="navbutton" href="#Home">HOME</a>
+        <a class="navbutton" href="#Home"><i class="fas fa-plane-departure"></i> HOME</a>
         <a class="navbutton smallhide" href="#About"><i class="fas fa-user"></i>  ABOUT</a>
         <a class="navbutton smallhide" href="#Videos"><i class="fab fa-youtube"></i>  VIDEOS</a>
         <a class="navbutton smallhide" href="#Twitch"><i class="fab fa-twitch"></i>  TWITCH</a>
