Content Div style testing

--- a/index.html
+++ b/index.html
@@ -53,7 +53,9 @@
 
     <!-- =============== About Div =============== -->
     <div class="infobox-1" id="About">
-      test update
+      <div class="about">
+        About Test
+      </div>
     </div>
 
     <!-- =============== Image Separator =============== -->
@@ -61,7 +63,9 @@
 
     <!-- =============== Videos Div =============== -->
     <div class="infobox-2" id="Videos">
-
+      <div class="youtube">
+        Youtube Test
+      </div>
     </div>
 
     <!-- =============== Image Separator =============== -->
@@ -69,7 +73,9 @@
 
     <!-- =============== Twitch Div =============== -->
     <div class="infobox-3" id="Twitch">
-
+      <div class="twitch">
+        Twitch Test
+      </div>
     </div>
 
     <!-- =============== Image Separator =============== -->
