--- a/index.html
+++ b/index.html
@@ -27,20 +27,20 @@
         <a class="navmobilebutton largehide" href="javascript:void(0);" onclick="toggleFunction()" title="Toggle Navigation Menu">
           <i class="fa fa-bars" style="color: lightgray;"></i>
         </a>
-        <a class="navbutton" href="#Home"><i class="fas fa-plane-departure"></i> HOME</a>
-        <a class="navbutton smallhide" href="#About"><i class="fas fa-user"></i>  ABOUT</a>
-        <a class="navbutton smallhide" href="#Videos"><i class="fab fa-youtube"></i>  VIDEOS</a>
-        <a class="navbutton smallhide" href="#Twitch"><i class="fab fa-twitch"></i>  TWITCH</a>
-        <a class="navbutton smallhide" href="#Portfolio"><i class="fas fa-th"></i>  PORTFOLIO</a>
-        <a class="navbutton smallhide" href="#Contact"><i class="fas fa-envelope"></i>  CONTACT</a>
+        <a class="navbutton" href="#Home"><i class="fas fa-plane-departure" style="padding-right: 4px;"></i> HOME</a>
+        <a class="navbutton smallhide" href="#About"><i class="fas fa-user" style="padding: 2px;"></i>  ABOUT</a>
+        <a class="navbutton smallhide" href="#Videos"><i class="fab fa-youtube" style="padding: 2px;"></i>  VIDEOS</a>
+        <a class="navbutton smallhide" href="#Twitch"><i class="fab fa-twitch" style="padding: 2px;"></i>  TWITCH</a>
+        <a class="navbutton smallhide" href="#Portfolio"><i class="fas fa-th" style="padding: 2px;"></i>  PORTFOLIO</a>
+        <a class="navbutton smallhide" href="#Contact"><i class="fas fa-envelope" style="padding: 2px;"></i>  CONTACT</a>
       </div>
       <!-- =============== Nav Bar Mobile =============== -->
       <div id="navbarsmall" class="barhide">
-        <a href="#About" class="navbutton" onclick="toggleFunction()">ABOUT</a>
-        <a href="#Videos" class="navbutton" onclick="toggleFunction()">VIDEOS</a>
-        <a href="#Twitch" class="navbutton" onclick="toggleFunction()">TWITCH</a>
-        <a href="#Portfolio" class="navbutton" onclick="toggleFunction()">PORTFOLIO</a>
-        <a href="#Contact" class="navbutton" onclick="toggleFunction()">CONTACT</a>
+        <a href="#About" class="navmobilemenu" onclick="toggleFunction()">ABOUT</a>
+        <a href="#Videos" class="navmobilemenu" onclick="toggleFunction()">VIDEOS</a>
+        <a href="#Twitch" class="navmobilemenu" onclick="toggleFunction()">TWITCH</a>
+        <a href="#Portfolio" class="navmobilemenu" onclick="toggleFunction()">PORTFOLIO</a>
+        <a href="#Contact" class="navmobilemenu" onclick="toggleFunction()">CONTACT</a>
       </div>
     </div>
 
@@ -93,9 +93,6 @@
     <div class="infobox-5" id="Contact">
 
     </div>
-
-    <!-- =============== Image Separator =============== -->
-    <div class="bgimg-3"></div>
 
     <!-- =============== Page Scripts =============== -->
   <script>
