--- a/index.html
+++ b/index.html
@@ -12,9 +12,6 @@
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
-    <!-- W3 Test CSS
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-    -->
   </head>
 
 
@@ -36,11 +33,11 @@
       </div>
       <!-- =============== Nav Bar Mobile =============== -->
       <div id="navbarsmall" class="barhide">
-        <a href="#About" class="navmobilemenu" onclick="toggleFunction()">ABOUT</a>
-        <a href="#Videos" class="navmobilemenu" onclick="toggleFunction()">VIDEOS</a>
-        <a href="#Twitch" class="navmobilemenu" onclick="toggleFunction()">TWITCH</a>
-        <a href="#Portfolio" class="navmobilemenu" onclick="toggleFunction()">PORTFOLIO</a>
-        <a href="#Contact" class="navmobilemenu" onclick="toggleFunction()">CONTACT</a>
+        <a href="#About" class="navmobilemenu" onclick="toggleFunction()"><i class="fas fa-user" style="padding: 2px;"></i> ABOUT</a>
+        <a href="#Videos" class="navmobilemenu" onclick="toggleFunction()"><i class="fab fa-youtube" style="padding: 2px;"></i> VIDEOS</a>
+        <a href="#Twitch" class="navmobilemenu" onclick="toggleFunction()"><i class="fab fa-twitch" style="padding: 2px;"></i>  TWITCH</a>
+        <a href="#Portfolio" class="navmobilemenu" onclick="toggleFunction()"><i class="fas fa-th" style="padding: 2px;"></i>  PORTFOLIO</a>
+        <a href="#Contact" class="navmobilemenu" onclick="toggleFunction()"><i class="fas fa-envelope" style="padding: 2px;"></i>  CONTACT</a>
       </div>
     </div>
 
