--- a/index.html
+++ b/index.html
@@ -51,7 +51,11 @@
     <!-- =============== About Div =============== -->
     <div class="infobox-1" id="About">
       <div class="about">
-        About Test
+        <div class="aboutContainer">
+          <div class="aboutMe">
+            <p>About Me</p>
+          </div>
+        </div>
       </div>
     </div>
 
