About me section worked on

--- a/index.html
+++ b/index.html
@@ -49,11 +49,16 @@
     </div>
 
     <!-- =============== About Div =============== -->
-    <div class="infobox-1" id="About">
+    <div class="infobox-1" style="height: 50%;" id="About">
       <div class="about">
         <div class="aboutContainer">
-          <div class="aboutMe">
-            <p>About Me</p>
+          <h3 class="aboutMe">About Me</h3>
+          <p style=" color: #777; font-size: 15px;">Some Nonsense</p>
+          <div>
+            <div class="aboutMeRow">
+              <p><b style="margin-right: 32px;"><i class="fas fa-user" style="margin: 16px;"></i>Joey Pinho</b></p>
+              <img src="images/bgimg-4.jpg" class="aboutMeImage" width="240" height="320">
+            </div>
           </div>
         </div>
       </div>
@@ -80,7 +85,7 @@
     </div>
 
     <!-- =============== Image Separator =============== -->
-    <div class="bgimg-1"></div>
+    <div class="bgimg-4"></div>
 
     <!-- =============== Portfolio Div =============== -->
     <div class="infobox-4" id="Portfolio">
@@ -88,7 +93,7 @@
     </div>
 
     <!-- =============== Image Separator =============== -->
-    <div class="bgimg-2"></div>
+    <div class="bgimg-1"></div>
 
     <!-- =============== Contact Div =============== -->
     <div class="infobox-5" id="Contact">
