About me mostly done

--- a/index.html
+++ b/index.html
@@ -49,16 +49,26 @@
     </div>
 
     <!-- =============== About Div =============== -->
-    <div class="infobox-1" style="height: 50%;" id="About">
-      <div class="about">
-        <div class="aboutContainer">
-          <h3 class="aboutMe">About Me</h3>
-          <p style=" color: #777; font-size: 15px;">Some Nonsense</p>
-          <div>
-            <div class="aboutMeRow">
-              <p><b style="margin-right: 32px;"><i class="fas fa-user" style="margin: 16px;"></i>Joey Pinho</b></p>
-              <img src="images/bgimg-4.jpg" class="aboutMeImage" width="240" height="320">
-            </div>
+    <div class="about" id="About">
+      <div class="aboutContainer">
+        <h3 class="aboutMe">About Me</h3>
+        <p style=" color: #777; font-size: 15px;">We have created a fictional "personal" website/blog, and our fictional character is a hobby photographer. Lorem ipsum dolor sit amet,
+          consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+          ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt
+          in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
+          nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+        </p>
+        <div class="smallhide">
+          <div class="aboutMeRow">
+            <p><b style="margin-right: 32px;"><i class="fas fa-user" style="margin: 16px;"></i>Joey Pinho</b></p>
+            <img src="images/bgimg-4.jpg" class="aboutMeImage" width="240" height="320">
+          </div>
+          <div class="aboutMeRowInfo">
+            <p>Welcome to my website. I am lorem ipsum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+                exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor
+                incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+            </p>
           </div>
         </div>
       </div>
