Navbar icon spacing and container margins

--- a/index.html
+++ b/index.html
@@ -24,20 +24,20 @@
         <a class="navmobilebutton largehide" href="javascript:void(0);" onclick="toggleFunction()" title="Toggle Navigation Menu">
           <i class="fa fa-bars" style="color: lightgray;"></i>
         </a>
-        <a class="navbutton" href="#Home"><i class="fas fa-plane-departure" style="padding-right: 4px;"></i> HOME</a>
-        <a class="navbutton smallhide" href="#About"><i class="fas fa-user" style="padding: 2px;"></i>  ABOUT</a>
-        <a class="navbutton smallhide" href="#Videos"><i class="fab fa-youtube" style="padding: 2px;"></i>  VIDEOS</a>
-        <a class="navbutton smallhide" href="#Twitch"><i class="fab fa-twitch" style="padding: 2px;"></i>  TWITCH</a>
-        <a class="navbutton smallhide" href="#Portfolio"><i class="fas fa-th" style="padding: 2px;"></i>  PORTFOLIO</a>
-        <a class="navbutton smallhide" href="#Contact"><i class="fas fa-envelope" style="padding: 2px;"></i>  CONTACT</a>
+        <a class="navbutton" href="#Home"><i class="fas fa-plane-departure" style="margin-right: 8px;"></i> HOME</a>
+        <a class="navbutton smallhide" href="#About"><i class="fas fa-user" style="margin-right: 8px;"></i>  ABOUT</a>
+        <a class="navbutton smallhide" href="#Videos"><i class="fab fa-youtube" style="margin-right: 8px;"></i>  VIDEOS</a>
+        <a class="navbutton smallhide" href="#Twitch"><i class="fab fa-twitch" style="margin-right: 8px;"></i>  TWITCH</a>
+        <a class="navbutton smallhide" href="#Portfolio"><i class="fas fa-th" style="margin-right: 8px;"></i>  PORTFOLIO</a>
+        <a class="navbutton smallhide" href="#Contact"><i class="fas fa-envelope" style="margin-right: 8px;"></i>  CONTACT</a>
       </div>
       <!-- =============== Nav Bar Mobile =============== -->
       <div id="navbarsmall" class="barhide">
-        <a href="#About" class="navmobilemenu" onclick="toggleFunction()"><i class="fas fa-user" style="padding: 2px;"></i> ABOUT</a>
-        <a href="#Videos" class="navmobilemenu" onclick="toggleFunction()"><i class="fab fa-youtube" style="padding: 2px;"></i> VIDEOS</a>
-        <a href="#Twitch" class="navmobilemenu" onclick="toggleFunction()"><i class="fab fa-twitch" style="padding: 2px;"></i>  TWITCH</a>
-        <a href="#Portfolio" class="navmobilemenu" onclick="toggleFunction()"><i class="fas fa-th" style="padding: 2px;"></i>  PORTFOLIO</a>
-        <a href="#Contact" class="navmobilemenu" onclick="toggleFunction()"><i class="fas fa-envelope" style="padding: 2px;"></i>  CONTACT</a>
+        <a href="#About" class="navmobilemenu" onclick="toggleFunction()"><i class="fas fa-user" style="margin-right: 8px;"></i> ABOUT</a>
+        <a href="#Videos" class="navmobilemenu" onclick="toggleFunction()"><i class="fab fa-youtube" style="margin-right: 8px;"></i> VIDEOS</a>
+        <a href="#Twitch" class="navmobilemenu" onclick="toggleFunction()"><i class="fab fa-twitch" style="margin-right: 8px;"></i>  TWITCH</a>
+        <a href="#Portfolio" class="navmobilemenu" onclick="toggleFunction()"><i class="fas fa-th" style="margin-right: 8px;"></i>  PORTFOLIO</a>
+        <a href="#Contact" class="navmobilemenu" onclick="toggleFunction()"><i class="fas fa-envelope" style="margin-right: 8px;"></i>  CONTACT</a>
       </div>
     </div>
 
